--- a/.hintrc
+++ b/.hintrc
@@ -19,6 +19,8 @@
         "button-name": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "disown-opener": "off",
+    "button-type": "off"
   }
 }
